# mstan

./: .gitignore  AngleAndDistance.stan  Chain_Generation_and_Search.py  LICENSE  README.md  apex-predator-search.py  birthday_df.csv  birthday_df_create_and_test.py  default.nix  elpd.R  elpd_df.py  exhaustive.py  flake.nix  golf.m.stan  golf.notes.json  golf.split.hs  golf2.m.stan  golfBinomial.stan  graph_search.py  irt.modular.stan  mockup.cabal  mstan  mstan.cabal  pres.org  random_models.py  score.sh  stack.yaml  visualization-notes.org
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: bernoulli.m.stan  bernoulli_data.json  full-golf-notes-v1.json  golf.m.stan  golf2.m.stan  gq-associated-modules.m.stan  gq-concatenation.m.stan  impl-overlap.m.stan  irt.notes.json  irts.m.stan  simple.m.stan
examples/birthday/: birthday-collection-trends-experimental.m.stan  birthday-elpd-log.txt  birthday-named-trends-functional.m.stan  birthday-named-trends.m.stan  birthday-search-notes.json  birthday-trivial-translation.m.stan  birthday.m.stan  births_usa_1969.json  gpbf8.stan  prepare_birthday_data.R
examples/pathological/: cross-issue.m.stan  sig-overlap.m.stan
examples/roach/: roach.json  roach.m.stan
ghcjs/: default.nix
lib/: ConcreteProgram.hs  Graphviz.hs  Indent.hs  Macros.hs  ModelGraph.hs  ModuleTree.hs  Parsing.hs  SemanticChecking.hs  Types.hs
modulemodel/: callElpd.R  hierarchicalmulti.txt
modulemodel/.ipynb_checkpoints/: treatment-effect-checkpoint.txt
modulemodel/stanfiles/: birthdays.R  gpbf1.stan  gpbf2.stan  gpbf3.stan  gpbf4.stan  gpbf5.stan  gpbf6.stan  gpbf7.stan  gpbf8.stan  gpbf8rhs.stan  gpbf8tnu.stan
mstan/: CLI.hs  DiagnosticPrinting.hs  Main.hs
mstan-server/: CLI.hs  GraphServer.hs  Main.hs  WebSocketServer.hs
pres/: index.html
search_algorithms/: Bandit_approach_Score_based_Algorithm.py  Chain_Generation_and_Search.py  apex-predator-search.py  bayesian_probabilistic_search.py  birthday_df.csv  birthday_df_create_and_test.py  birthday_df_prob.csv  elpd.R  elpd_df.py  graph_search.py  model_space_exploration.ipynb  mstan_interface.py  random_models.py  roach_df.csv
server-scripts/: kill-mstan.sh  kill-stayup.sh  run-bg.sh  run.sh  stayup-bg.sh  stayup.sh
src/: CLI.hs  ConcreteProgram.hs  Concretization.hs  DiagnosticPrinting.hs  Golf.hs  GolfTextual.hs  GraphServer.hs  Graphviz.hs  IRTs.hs  Indent.hs  Main.hs  Mockup.hs  ModelGraph.hs  ModularStan.hs  ModuleTree.hs  Parsing.hs  Parsing_bad.hs  Printing.hs  Server.hs  ToGraph.hs  Types.hs  WSServer.hs  WebServer.hs
temp-models/: gq-concatenation.m.stan_Dist:a.stan
