name:                mockup
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mockup#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mockup
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       attoparsec,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.10.1,
                       containers >= 0.6.2.1,
                       graphviz,
                       network-simple,
                       process,
                       text,
                       websockets,
                       clock,
                       directory
