name:                mstan
version:             0.1.0.0
homepage:            https://github.com/githubuser/mockup#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Bernstein
maintainer:          ryan.bernstein@columbia.edu
copyright:           2021 Ryan Bernstein
category:            Data Science
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mstan
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  other-modules:       CLI,
                       GraphServer,
                       ModuleTree,
                       ModelGraph,
                       ConcreteProgram,
                       Parsing,
                       Graphviz,
                       Types,
                       Printing,
                       DiagnosticPrinting,
                       WebSocketServer,
                       Indent
  build-depends:       attoparsec,
                       base >= 4.7 && < 5,
                       bytestring >= 0.10.10.1,
                       clock,
                       containers >= 0.6.2.1,
                       directory,
                       graphviz,
                       network-simple,
                       optparse-applicative,
                       process,
                       random,
                       text,
                       websockets,
                       algebraic-graphs
 
