name:                mstan
version:             0.1.0.0
homepage:            https://github.com/rybern/mstan
license:             BSD3
license-file:        LICENSE
author:              Ryan Bernstein
maintainer:          ryan.bernstein@columbia.edu
copyright:           2021 Ryan Bernstein
category:            Data Science
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Indent,
                       ModuleTree,
                       ModelGraph,
                       ConcreteProgram,
                       Parsing,
                       Graphviz,
                       Types,
                       Printing
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  build-depends:       algebraic-graphs,
                       attoparsec,
                       base >= 4.7 && < 5,
                       containers >= 0.6.2.1,
                       data-fix >= 0.3.0,
                       filepath >= 1.4.2.1,
                       graphviz,
                       process,
                       text,
                       uglymemo


executable mstan
  hs-source-dirs:      mstan
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  other-modules:       CLI,
                       DiagnosticPrinting
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.6.2.1,
                       optparse-applicative,
                       text,
                       mstan

executable mstan-server
  hs-source-dirs:      mstan-server
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  other-modules:       GraphServer,
                       WebSocketServer
                       CLI
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.10.1,
                       containers >= 0.6.2.1,
                       directory,
                       filepath >= 1.4.2.1,
                       mstan,
                       optparse-applicative,
                       random,
                       text,
                       websockets
